# github_handshake_web_site

./: .gitignore
git_handshakes/: docker-compose.yml  garage_isep_project_doc.odt
git_handshakes/.devcontainer/: devcontainer.json
git_handshakes/back/: Cargo.toml  Dockerfile
git_handshakes/back/.devcontainer/: DOCKERFILE  devcontainer.json
git_handshakes/back/src/: main.rs  state.rs
git_handshakes/back/src/handlers/: mod.rs
git_handshakes/back/src/handlers/git_users/: handler.rs  structs.rs
git_handshakes/back/src/handlers/git_users_repos/: functions.rs  handler.rs  mod.rs  structs.rs
git_handshakes/back/src/routes/: git_users.rs  mod.rs
git_handshakes/front/: Dockerfile  index.html  package.json
git_handshakes/front/.devcontainer/: devcontainer.json
git_handshakes/front/.pnpm-store/v10/index/02/: 9e86d16430714fcb1ecbcbc0e3757c0417f59a7403663a63f709065f6bfc96-esquery@1.7.0.json
git_handshakes/front/.pnpm-store/v10/index/04/: b2374e5d535b73ef97bd25df2ab763ae22f9ac29c17aac181616924a8cb676-which@2.0.2.json  ddb607979a30c23d50cb63ac677983978260fa423c3532d052576d8b1a4f9c-word-wrap@1.2.5.json
git_handshakes/front/.pnpm-store/v10/index/05/: d6e8cbe97bb40dce196e858f21475a43f92ee0728f54e4df72e3caad1ac72c-json-stable-stringify-without-jsonify@1.0.1.json
git_handshakes/front/.pnpm-store/v10/index/06/: d8f604e38ef37a375b21f9f5ef0c817b3111055c6ab9143a9118aee6c1d2ea-detect-libc@2.1.2.json
git_handshakes/front/src/: App.vue  main.js
git_handshakes/front/src/router/: index.js
git_handshakes/front/src/views/: home.vue
(+136 files in other folders)
