[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
axum-test = "14"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
reqwest = { version = "0.13", features = ["json", "default-tls"] }
tower-http = { version = "0.5", features = ["cors"]}